# flatlander

./: CODING_STYLE.md  README.md  anvil.ipynb  cl.py  flatland.py  litellm.py  prompt.json  pyproject.toml  st.py  streamlitcha.py
.obsidian/: workspace.json
prompts/: md_embeded_json.md
