[tool.poetry]
name = "flatlander"
version = "0.1.0"
description = "An Ai Agent Space (named in honor of Beowulf Schaffer)"
authors = ["Your Name <you@example.com>"]
license = "GPL 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
